force-app/main/default/objects/Invoicee__c/Invoicee__c.object-meta.xml
<CustomObject>
    <label>Invoicee</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoicees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>