force-app/main/default/objects/Invoicee__c/fields/Count_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Items__c</fullName>
    <label>Count of Items</label>
    <summaryForeignKey>Purchased_Items__c.Invoice_Number__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>