force-app/main/default/objects/Invoicee__c/fields/Total_Invoice_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Price__c</fullName>
    <label>Total Invoice Price</label>
    <summarizedField>Purchased_Items__c.Total_price_Inc_Tax__c</summarizedField>
    <summaryForeignKey>Purchased_Items__c.Invoice_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>