force-app/main/default/objects/Invoicee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Tax__c</columns>
    <columns>Count_of_Items__c</columns>
    <columns>Total_Invoice_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>